# ts3-query-proxy

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.test.yaml  docker-compose.yaml  proxy.py  pyproject.toml
.forgejo/workflows/: build.yaml
tests/: test_proxy.py
