[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ts3-query-proxy"
version = "1.0.0"
description = "Translation layer bridging TS3 raw ServerQuery (TCP 10011) to TS6 SSH Query (TCP 10022)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Joshua Hirsig" }]
dependencies = ["asyncssh>=2.17"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.9", "mypy>=1.14"]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["proxy.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
